ESASKYPCR-2268 - Fixed spacing in search tool details menu. Catch exception generated from  events

--- a/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/allskypanel/searchToolPanel.css
+++ b/esasky-cl/src/main/java/esac/archive/esasky/cl/web/client/view/allskypanel/searchToolPanel.css
@@ -65,6 +65,7 @@
     display: flex;
     justify-content: center; /* align horizontal */
     align-items: center; /* align vertical */
+    min-height: 30px;
 }
 
 .searchToolbox__detailsPanelCircle > div > .gwt-Label{
